# TCommTests

./: .gitignore  .gitmodules  README.md
TCommEspTest/: platformio.ini
TCommEspTest/lib/ControlLibrary/: ControlLibrary.h
TCommEspTest/lib/ControlLibrary/Communication/Media/: SerialAdapter.h  UASubscriber.h  WebSocketServer.h
TCommEspTest/lib/ControlLibrary/Communication/TComm/src/: AbstractCommunicationObject.h  AbstractSubscriber.h  BaseSubscriber.h  ByteSerializer.h  Common.h  CommunicationData.h  DummyCommunicationObject.h  SerialSubscriber.h  TCommServer.h  TemplateCommunicationObject.h  TypeRegistry.h  WinSerial.h
TCommEspTest/lib/ControlLibrary/System/: Entity.h  Timer.h
TCommEspTest/src/: main.cpp
TCommEspTest/src/Modules/CM/: ControlModule.h
TCommEspTest/src/Modules/EM/: EquipmentModule.h
TCommWinTerminal/: .gitmodules  CMakeLists.txt  main.cpp
TCommWinTerminal/lib/Communication/Media/: ClientHandler.h  SerialInterface.h  WifiSocket.h
TCommWinTerminal/lib/Communication/TComm/: TComm.h
TCommWinTerminal/lib/Communication/TComm/src/: BaseCommunicationObject.h  Common.h  Communicator.h  EnumUpdateInterval.h  LinuxSerial.h  StreamInterface.h  TCommBase.h  TCommClient.h  TCommServer.h
TCommWinTerminal/lib/System/: AbstractConnector.h  BaseConnector.h  ClockBits.h  Common.h  Connector.h  ResourceIndexManager.h
WinQtWidgets/: CMakeLists.txt  Data.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
WinTerminal/: CMakeLists.txt  Data.h  Main.cpp
